--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Weather Dashboard</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link rel="stylesheet" href="./Assets/Style/style.css">
-    </head>
-    <body>
-        <header>
-            <h1 class="text-center">Weather Dashboard</h1>
-        </header>
-        <div id="search-container">
-            <div id="search-box">
-                <h2>Search for a City</h2>
-                <input type="text" id="">
-                <button><i class="bi bi-search"></i></button>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Weather Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Assets/Style/style.css">
+</head>
+
+<body>
+    <header>
+        <h1 class="text-center text-light bg-dark">Weather Dashboard</h1>
+    </header>
+    <main class="flex-row justify-space-between">
+        <div class="col-4" id="search-container">
+            <div id="search-box card-body">
+                <h2>Search for a City:</h2>
+                <input name="city" autofocus="true" class="form-input" type="text" id="city">
+                <button type="submit" class="btn"><i class="bi bi-search"></i></button>
             </div>
             <div id="history-container">
 
             </div>
         </div>
-        <div id="result-display-container">
+        <div id="result-display-container" class="col-8">
             <div id="result-current-display">
-                
+                <h2 class="subtitle"><span id="city-search-term"></span></h2>
             </div>
             <div id="result-forecast-display">
-
+                <h2>5 Day Forecast</h2>
+                <div id="forecast-container"></div>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-        <script src="./Assets/Js/script.js"></script>
-    </body>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+    <script src="./Assets/Js/script.js"></script>
+</body>
+
 </html>
