--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="search-box card-body">
                 <h2>Search for a City:</h2>
                 <input name="city" autofocus="true" class="form-input" type="text" id="city">
-                <button type="submit" class="btn"><i class="bi bi-search"></i></button>
+                <button type="submit" class="btn"></button>
             </div>
             <div id="history-container">
 
@@ -31,7 +31,7 @@
                 <h2 class="subtitle"><span id="city-search-term"></span></h2>
             </div>
             <div id="result-forecast-display">
-                <h2>5 Day Forecast</h2>
+                <h2>5 Day Forecast:</h2>
                 <div id="forecast-container"></div>
             </div>
         </div>
