progress on errors preventing display

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </header>
     <main class="flex-row justify-space-between">
         <div class="col-4" id="search-container">
-            <div id="search-box card-body">
-                <h2>Search for a City:</h2>
+            <form class="card-body" id="search-box">
+                <label class="form-label" for="city">City</label>
                 <input name="city" autofocus="true" class="form-input" type="text" id="city">
-                <button type="submit" class="btn"></button>
-            </div>
+                <button type="submit" class="btn">Search</button>
+            </form>
             <div id="history-container">
 
             </div>
