--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div id="result-display-container" class="col-8">
             <div id="result-current-display">
                 <h2 class="subtitle"><span id="city-search-term"></span></h2>
+                <div class="weather" id="weather"></div>
             </div>
             <div id="result-forecast-display">
                 <h2>5 Day Forecast:</h2>
